[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
edition = "2018"

[dependencies]
bitcoincore-rpc = { path = "../client", features = ["rand"] }
bitcoin = { git = "https://github.com/canarycatcoin/rust-bitcoin.git", tag = "bitcoin-0.32.13", features = ["serde", "rand"] }
lazy_static = "1.4.0"
log = "0.4"
